<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitulo"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvCabecera"
        android:id="@+id/tvCabecera"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/tvCabecera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvNoteEdad"
        android:id="@+id/tvNoteEdad"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/tvCabecera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvNumeroEjercicio"
        android:id="@+id/tvNumeroEjercicio"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/tvNoteEdad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
